force-app/main/default/objects/Audit_Log_Entry__c/Audit_Log_Entry__c.object-meta.xml
<CustomObject>
    <description>Referenced to an auditing log from Github&apos;s orgs.</description>
    <label>Audit Log Entry</label>
    <nameField>
        <label>Audit Log Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>