force-app/main/default/objects/Audit_Log_Entry__c/fields/Access_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Access_Recipient__c</fullName>
    <description>The Github username that is receiving access or permissions.</description>
    <label>Access Recipient</label>
    <length>100</length>
    <type>Text</type>
</CustomField>