force-app/main/default/objects/Audit_Log_Entry__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The action of the user.</description>
    <label>Action</label>
    <length>250</length>
    <type>Text</type>
</CustomField>