force-app/main/default/objects/Audit_Log_Entry__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <description>The name of the branch that the user is working on.</description>
    <label>Branch Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>