force-app/main/default/objects/Audit_Log_Entry__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>The country of where the user performed the action.</description>
    <label>Country Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>