force-app/main/default/objects/Audit_Log_Entry__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <description>The time that this action was being done.</description>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>