force-app/main/default/objects/Audit_Log_Entry__c/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <description>The Github document ID that is associated with this action.</description>
    <label>Document_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>