force-app/main/default/objects/Audit_Log_Entry__c/fields/Github_User__c.field-meta.xml
<CustomField>
    <fullName>Github_User__c</fullName>
    <description>The github username of the employee</description>
    <label>Github-User</label>
    <length>45</length>
    <type>Text</type>
</CustomField>