force-app/main/default/objects/Audit_Log_Entry__c/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <description>The name of the org that the user is in.</description>
    <label>Org</label>
    <length>40</length>
    <type>Text</type>
</CustomField>