force-app/main/default/objects/Audit_Log_Entry__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <description>The name of the repository that the user is working on.</description>
    <label>Repository</label>
    <length>100</length>
    <type>Text</type>
</CustomField>