force-app/main/default/objects/Audit_Log_Entry__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>The timestamp of when this action was done or created.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>