force-app/main/default/objects/Audit_Log_Entry__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>The visibility of an action.</description>
    <label>Visibility</label>
    <length>250</length>
    <type>Text</type>
</CustomField>